[gd_scene load_steps=3 format=3 uid="uid://d1q0yhjtqyqjb"]

[ext_resource type="Script" path="res://Scripts/coal_pile.gd" id="1_rdfga"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8gsyh"]
radius = 128.0

[node name="CoalPile" type="StaticBody2D" groups=["sources"]]
script = ExtResource("1_rdfga")

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color(0.141176, 0.141176, 0.141176, 1)
polygon = PackedVector2Array(-24, 0, 24, 0, 24, -16, 16, -32, 8, -40, -8, -40, -16, -32, -24, -16)

[node name="HeatArea2D" type="Area2D" parent="."]
position = Vector2(0, -16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HeatArea2D"]
shape = SubResource("CircleShape2D_8gsyh")
disabled = true

[node name="Polygon2D" type="Polygon2D" parent="HeatArea2D"]
visible = false
color = Color(0.831373, 0.27451, 0, 0.223529)
polygon = PackedVector2Array(96, -96, 128, 0, 88, 96, 0, 128, -96, 96, -128, 0, -96, -96, 0, -128)

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -24.0
offset_top = -64.0
offset_right = 24.0
offset_bottom = -48.0
step = 20.0
show_percentage = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-24, 0, 24, 0, 24, -16, 16, -32, 8, -40, -8, -40, -16, -32, -24, -16)

[connection signal="body_entered" from="HeatArea2D" to="." method="_on_heat_area_2d_body_entered"]
[connection signal="body_exited" from="HeatArea2D" to="." method="_on_heat_area_2d_body_exited"]
